--- a/static/main.css
+++ b/static/main.css
@@ -30,10 +30,13 @@ li {
 
 li:hover {
   background-color: #c9cbcc; 
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 .title {
   font-size: 20px;
   font-weight: bold;
 }
+
+.hidden {display: none;}
+.show {display: block;}
