--- a/static/main.css
+++ b/static/main.css
@@ -4,6 +4,10 @@ p {
   margin: 0;
 }
 
+.hidden {
+  display: none;
+}
+
 input {
   display: block;
   margin: 0 0 10px 0;
@@ -43,4 +47,52 @@ li:hover {
 
 button {
   margin-right: 10px;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+
+.get button{
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+.update button{
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+
+.delete button{
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+
+.add button{
+  color: #fff;
+  background-color: #0f8f15;
+  border-color: #0f8f15;
+}
+
+.get, .delete, .update{
+  width: 20px;
 }
